feat:fully support Kafka to access logs and switch logic after logging